# python-langchain-unstructured

./: .bumpversion.cfg  .cookiecutter.json  .cruft.json  .envrc  .gitignore  .gitlint  .gitownrc  .pre-commit-config.yaml  .pylintrc  .python-version  CHANGELOG.md  CODEOWNERS  Makefile  README.md  mkdocs._yaml  poetry.toml  prospector.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: mkdocs-gh-pages.yml
Makefile.d/: README.md  argocd.mk  aws.mk  help.mk  k8s.mk  lint.mk  pre-commit.mk  python.mk  shared.mk  terraform-macros.mk  terraform.mk
debug/: main.py  main.txt
docs/js/: custom.js  termynal.js
docs/overrides/: footer.html
langchain-unstructured/: __init__.py
tests/: conftest.py  test_nothing.py
